# Gopher-Learning-Rust

./: .fontconfig  LEARNING_GUIDE.md  README.md  SUMMARY.md  book.toml  preface.md
.github/workflows/: mdbook.yml
chapters/01-basic-syntax/: README.md
chapters/02-memory-management/: README.md
chapters/03-error-handling/: README.md
chapters/09-http-server/: README.md
chapters/13-microservices/: README.md
examples/todo-api-rust/: Cargo.toml  README.md
examples/todo-api-rust/src/: main.rs
examples/todo-api-rust/src/config/: mod.rs
examples/todo-api-rust/src/models/: mod.rs
part-1/: 01-core-differences.md  02-rust-basics-vs-go.md
part-2/: 03-ownership-core-rules.md  04-collections-and-strings.md  04-common-pitfalls.md
part-3/: 05-struct-enum-trait.md  06-generics-and-bounds.md
part-4/: 07-async-programming.md  08-networking.md  09-database-orm.md
part-5/: 10-concurrency-models.md  11-actor-model.md  README.md
part-6/: 12-project-management.md  13-logging-and-config.md  14-microservices-distribution.md
part-7/: 15-build-backend-from-scratch.md  16-advanced-topics.md
part-8/: README.md
src/: SUMMARY.md  cover.md  faq.md  preface.md
src/part-1/: 01-core-differences.md  02-rust-basics-vs-go.md  README.md
src/part-2/: 03-ownership-core-rules.md  04-collections-and-strings.md  05-common-pitfalls.md  README.md
src/part-3/: 06-struct-enum-trait.md  07-generics-and-bounds.md  README.md
src/part-4/: 08-async-programming.md  09-networking.md  10-database-orm.md  README.md
src/part-5/: 11-concurrency-models.md  (+2 more)
theme/: custom.css  custom.js
(+16 files in other folders)
